doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-library-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/octavia/Dev/BlueJ.FirstSaturday
-d
/Users/octavia/Dev/BlueJ.FirstSaturday/doc
-encoding
UTF-8
-charset
UTF-8
/Users/octavia/Dev/BlueJ.FirstSaturday/WriteIFs.java
<---- end of javadoc command ---->
Loading source file /Users/octavia/Dev/BlueJ.FirstSaturday/WriteIFs.java...
Constructing Javadoc information...
/Users/octavia/Dev/BlueJ.FirstSaturday/WriteIFs.java:10: error: cannot find symbol
    private _type_ x;
            ^
  symbol:   class _type_
  location: class WriteIFs
1 error
